<resources>
    <string name="app_name">Treasures of Words</string>
    <string name="app_name_upper">TREASURES OF WORDS</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="beginning_text">Welcome to our Treasures of Words \nFriendly program.\nThis program will force you to teach vocabulary.\nThe most important thing for a language\nis its vocabulary.\nChoose the languages you want and start learning.</string>
    <string name="change_language">Change Language</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN  IN</string>
    <string name="hint_email">Email*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_password_again">Confirm Password*</string>
    <string name="do_you_have_an_account">Do you have an account?</string>

    <string name="first_page">first_page</string>
    <string name="login_page">login_page</string>
    <string name="register_page">register_page</string>
    <string name="create_user_message">You have successfully registered.</string>
    <string name="verification_message">Please, confirm your account from your email.</string>

    <string name="weak_password">The password must be 6 characters long or more.</string>
    <string name="email_already_in_use">The email address is already in use by another account.</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="send_verification_message">Send email</string>
    <string name="send_verification_message_time">to resend</string>
    <string name="verification_succesfull">Your account has been verified.</string>

    <string name="menu_home">Home</string>
    <string name="menu_word">My Words</string>

    <string name="menu_quiz">Quiz</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="reset_password">Enter your e-mail address to reset your password.</string>
    <string name="reset_password_time_message">Time to resend : </string>
    <string name="second">second</string>
    <string name="reset_password_toast_message">Please, check your email.</string>
    <string name="password_reset_page_name">Password Reset</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="email_is_empty">Please, enter Email address.</string>
    <string name="language_to_translated">Word to be translated</string>
    <string name="translated_language">Translated word</string>

    <string name="add_text">Add</string>
    <string name="continue_text">Continue</string>
    <string name="same_language_error_message">Select different language</string>
    <string name="has_already_error_message">Already created</string>

    <string name="selected_languages_is_empty">Please, select languages </string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="three_months">3 Months</string>
    <string name="all_time">All Time</string>
    <string name="all_words">All Words</string>

    <string name="log_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_out_message">Are you sure you want to sign out of the account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="learned_words">Learned Words</string>

    <string name="sign_in_different_account">Sign in with different account.</string>
    <string name="has_already_chosed">Has already chosed</string>
    <string name="email_send_message">Email sended.</string>
    <string name="loading">Process in progress, please wait</string>
    <string name="app_leave_out_message">Are you sure you want to exit the application?</string>
    <string name="search">Search</string>
    <string name="add_word">Add Word</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="word_added">Word added.</string>
    <string name="empty_message">Can not be empty!</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="words_deleted">Words Deleted</string>
    <string name="word_deleted">Word Deleted</string>
    <string name="word_delete_message">Are you sure you want to delete the selected words?</string>
    <string name="word_delete">Word delete</string>

    <string name="sign_in_text">Sign in</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="profile_updated">Profile updated</string>
    <string name="phone_length">Phone number must be 10 digit.</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_message">Password changed</string>
    <string name="change_password_character_error">Password must be at least 6 characters</string>

    <string name="answer">Answer</string>
    <string name="quiz_preparing">Quiz is preparing.</string>
    <string name="quiz_min_10_word">You must add at least 15 words for the quiz.</string>

    <string name="ten_question_quiz">Multiple Choice Questions(10)</string>
    <string name="twelwe_question_quiz">Multiple Choice Questions(20)</string>
    <string name="matching_quiz">Word Matching</string>

    <string name="insufficient_word_10">Minimum 15 word</string>
    <string name="insufficient_word_20">Minimum 25 word</string>
    <string name="go_quiz_page">Go quiz page</string>
    <string name="new_quiz">New quiz</string>
    <string name="correct">True</string>
    <string name="wrong">False</string>
    <string name="quiz_brief">Quiz Brief</string>
    <string name="level_up">level up</string>
    <string name="question_header">What is the meaning of</string>

    <string name="zero_level">0 Level \nWords</string>
    <string name="one_level">1 Level \nWords</string>
    <string name="two_level">2 Level \nWords</string>
    <string name="three_level">3 Level \nWords</string>
    <string name="four_level">4 Level \nWords</string>
    <string name="five_level">5 Level \nWords</string>
    <string name="repeat_quiz">Repeat</string>
    <string name="quiz">Quiz</string>

    <string name="notification_title">Quiz Time</string>
    <string name="notification_content">Lets, continue to learn word</string>
    <string name="level_dropped">level dropped</string>
    <string name="models_not_ready">Language model not ready</string>
    <string name="delete_profile">Delete Account</string>

    <string name="delete_profile_message">Are you sure? Deleting your account will result in the deletion of all your data.</string>



</resources>