<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/menu_home"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/wordFragment"
        android:title="@string/menu_word"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_words"

        />

    <item
        android:id="@+id/quizFragment"
        android:title="@string/menu_quiz"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_quiz"

        />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/menu_profile"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_profile"

        />





</menu>