<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.treaasuresofwords.View.Main.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/addWordFragment"
        android:name="com.example.treaasuresofwords.View.Main.AddWord.AddWordFragment"
        android:label="fragment_add_word"
        tools:layout="@layout/fragment_add_word" />
    <fragment
        android:id="@+id/wordFragment"
        android:name="com.example.treaasuresofwords.View.Main.Word.WordFragment"
        android:label="@string/menu_word"
        tools:layout="@layout/fragment_word" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.treaasuresofwords.View.Main.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.treaasuresofwords.View.Main.Quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" />
</navigation>