<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_sheet_background_color"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <TextView
        android:id="@+id/txt_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/change_tr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turkish"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:drawablePadding="10dp"
        android:layout_marginBottom="25dp"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/tr" />
    <TextView
        android:id="@+id/change_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/english"
        android:textColor="@color/white"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/gb" />


</LinearLayout>