<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:soundEffectsEnabled="false"
    android:layout_height="match_parent"
    tools:context=".View.Main.Home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtAllWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3000"
            android:textColor="@color/register_button_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/all_words"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtAllWord"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:soundEffectsEnabled="false"
        android:id="@+id/btnOpenTopMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_three_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:elevation="20dp"
        android:translationZ="100dp"
        android:background="@drawable/top_menu_background"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingTop="20dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenTopMenu">

        <TextView
            android:id="@+id/btnGoProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/menu_profile"
            android:textColor="@color/top_menu_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnGoSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/settings"
            android:textColor="@color/top_menu_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnGoHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help"
            android:textColor="@color/top_menu_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/top_menu_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/learned_words"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/txtLearnedWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="2500"
        android:textColor="@color/progress_bar_progress_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioBtnThisWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_radio_button"
            android:button="@color/transparant"
            android:padding="10dp"
            android:text="@string/this_week"
            android:textColor="@color/words_filter_text_color"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioBtnThisMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/filter_radio_button"
            android:button="@color/transparant"
            android:padding="10dp"
            android:text="@string/this_month"
            android:textColor="@color/words_filter_text_color"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioBtnThreeMonths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/filter_radio_button"
            android:button="@color/transparant"
            android:padding="10dp"
            android:text="@string/three_months"
            android:textColor="@color/words_filter_text_color"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioBtnAllTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/filter_radio_button"
            android:button="@color/transparant"
            android:padding="10dp"
            android:text="@string/all_time"
            android:textColor="@color/words_filter_text_color"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>