<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginAndRegister.PasswordReset.PasswordResetFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/text_color"
            android:layout_marginBottom="25dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_text_box"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/edit_text_box_text_color"
            android:textColorHint="@color/edit_text_box_text_color" />

        <Button
            android:id="@+id/btnSenResetEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/radius_button"
            android:text="@string/send_verification_message"
            android:textColor="@color/login_button_text_color"
            android:textSize="16sp"
            app:backgroundTint="@color/login_button_color" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>