<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".View.LoginAndRegister.Verification.VerificationActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/verification_message"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtSendTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/register_button_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSendVerificationMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_button"
            android:text="@string/send_verification_message"

            android:textColor="@color/login_button_text_color"
            android:textSize="16sp"
            app:backgroundTint="@color/login_button_color" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignInDifferentLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/radius_button"
        android:text="@string/sign_in_different_account"
        android:textColor="@color/register_button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>