<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginAndRegister.Login.LoginFragment" >

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/back_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="2"
            android:src="@drawable/undraw_mobile_login_re_9ntv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEmailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                app:boxBackgroundColor="@color/edit_text_box_bg_color"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                android:hint="@string/hint_email"
                android:textColorHint="@color/edit_text_box_text_color"
                app:boxStrokeColor="#2196F3"
                app:boxStrokeErrorColor="#FF0000"
                app:endIconMode="clear_text"
                app:errorTextColor="#FF0000"
                app:helperText=""
                app:hintTextColor="@color/edit_text_box_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/edit_text_box_text_color"
                    android:textColorHighlight="#FF9800"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:boxBackgroundColor="@color/edit_text_box_bg_color"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/edit_text_box_text_color"
                app:boxStrokeColor="#2196F3"
                app:boxStrokeErrorColor="#FF0000"
                app:endIconMode="password_toggle"
                app:errorTextColor="#FF0000"
                app:helperText=""
                app:hintTextColor="@color/edit_text_box_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/edit_text_box_text_color"
                    android:textColorHighlight="#FF9800"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color"
                android:layout_marginBottom="50dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginEnd="25dp"
                tools:ignore="RtlHardcoded" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/dont_have_an_account"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textColor="@color/bottom_sheet_background_color" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/radius_button"
                android:text="@string/sign_in"
                android:textColor="@color/login_button_text_color"
                android:textSize="16sp"
                app:backgroundTint="@color/login_button_color" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>